--- a/index.html
+++ b/index.html
@@ -109,20 +109,14 @@
         <h2>About Me</h2>
         <div class="section-content">
           <p>
-            Hey yo, this is Rishav Sharma. Nice site isnt it. So yeah made 
-            this site coz it looks cool. I know some java and some XML and
-            some basic to intermediate web designing. SO yead i am a
-            "beginner android developer". Not sure if that means anything.
-            SO yeah thats basically it.
+            Hey yo, this is Rishav Sharma. I know some good html and I am getting my hands on JS. I have plans to ReactJS too.
           </p>
           <p>
             If you wanna hit me up (I wish you dont) text me on my 2nd
             Line number.
           </p>
           <p>
-            What should I write more? Hail pewdiepie.... hail Bob 
-            Marley.... Hail floor gang....Hail Android Gang....
-            Apple SUCKS.
+            What should I write more?
           </p>
         </div>
       </section>
